Add Participant Reg form in djagno

--- a/htmlPages/Administrator/base.html
+++ b/htmlPages/Administrator/base.html
@@ -34,6 +34,7 @@
                         <a href="event_head_manager">Event Head</a>
                         <a href="coordinator_manager">Co-ordinator</a>
                         <a href="collage_manager">Colleges</a>
+                        <a href="news_manager">News</a>
                     </div>
                 </div>
             </li>
