--- a/htmlPages/FestOfficialWebSite/base.html
+++ b/htmlPages/FestOfficialWebSite/base.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="description" content="NU-Sports">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
     {% block loadcss %}
 
     {% endblock %}
@@ -42,6 +43,9 @@
 
     {% endblock %}
 
+    {% block loadScript %}
+    
+    {% endblock %}
     <div id="footer">
 
     </div>
