--- a/htmlPages/FestOfficialWebSite/registration_new.html
+++ b/htmlPages/FestOfficialWebSite/registration_new.html
@@ -18,7 +18,12 @@
                 <!-- {% csrf_token %} -->
             <div class="inputbox">
                 <input type="text" id="name" required="required">
-                <label>Name</label>
+                <label>First Name</label>
+            </div>
+
+            <div class="inputbox">
+                <input type="text" id="name" required="required">
+                <label>Last Name</label>
             </div>
 
             <div class="inputbox">
