Added event committee reg form

--- a/htmlPages/Administrator/base.html
+++ b/htmlPages/Administrator/base.html
@@ -35,6 +35,7 @@
                         <a href="coordinator_manager">Co-ordinator</a>
                         <a href="collage_manager">Colleges</a>
                         <a href="news_manager">News</a>
+                        <a href="stream_manager">Stream</a>
                     </div>
                 </div>
             </li>
