add eventCommitteeRegForm, admin login backend, set news_managerbackend

--- a/htmlPages/EventWebSite/login.html
+++ b/htmlPages/EventWebSite/login.html
@@ -43,7 +43,7 @@
          </div>
 
          <div class="reg_btn_container" id="reg_btn_container">
-            <button type="button" id="reg_btn" class="reg_btn">REGISTER</button>
+            <a href="register" id="reg_btn" class="reg_btn">REGISTER</a>
          </div>
 </body>
 </html>
