--- a/htmlPages/Administrator/admin_login.html
+++ b/htmlPages/Administrator/admin_login.html
@@ -13,17 +13,22 @@
                 <!--<img src="../media/avatar.png" id="logo">-->
                 <p id="signin" class="box_title">Admin Log In</p>
         
-                <form action="admin_dashboard">
+                <form method="POST">
+                    {% csrf_token %}
                     <div id="username" class="inputbox">
-                        <input type="text" required="required">
-                        <label>User Name</label>
+                        <input type="text" name="email" value="{{ email }}" required="required">
+                        <label>Email ID</label>
                     </div>
         
                     <div id="password" class="inputbox">
-                        <input type="password" required="required">
+                        <input type="password" name="password" required="required">
                         <label>Password</label>
                     </div>
-
+                    {% if message %}
+                    <div id="errormsg">
+                        <p>{{ message }}</p>
+                    </div>
+                    {% endif %}
                     <div>
                         <div id="submit_btn_container">
                             <input type="submit" value="SIGN IN" id="submit_btn">
