Add functionality in news_manager of fetch news form db ,add news, edit news

--- a/htmlPages/UserManager/eventCommittee.html
+++ b/htmlPages/UserManager/eventCommittee.html
@@ -19,5 +19,11 @@
         <a href="eventCommitteeRegForm">Register</a>
     </div>
 
+    <form method="POST">
+        {% csrf_token %}
+        {{form}}
+        <button type="submit">Submit</button>
+    </form>
+    
 </body>
 </html>
