--- a/htmlPages/Administrator/base.html
+++ b/htmlPages/Administrator/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
     {% block title %}
 
     {% endblock %}
@@ -51,5 +51,8 @@
 
     {% endblock %}
     
+    {% block loadscript %}
+
+    {% endblock %}
 </body>
 </html>
