add functionality in news_manager of news_delete,, improve news_manager and fix bugs and add all functionalities in collage_manager like add, edit, delete

--- a/htmlPages/EventWebSite/homepage.html
+++ b/htmlPages/EventWebSite/homepage.html
@@ -23,7 +23,7 @@
     <div id="news" class="basic">
         <ul>
             {% for n in news %}
-            <li><a href="{{n.hyperlink}}">{{n.news_containt}}</a></li>
+            <li><a href="{{n.hyperlink}}">{{n.news_content}}</a></li>
             {% endfor %}
         </ul>
     </div>
