Modify Participant Registration form and add functionality of selecting event

--- a/htmlPages/Administrator/admin_dashboard.html
+++ b/htmlPages/Administrator/admin_dashboard.html
@@ -8,6 +8,7 @@
 
 {% block loadcss %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/Admin_dashboard.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/manage.css' %}">
 {% endblock %}
 
 {% block content %}
