--- a/htmlPages/Administrator/base.html
+++ b/htmlPages/Administrator/base.html
@@ -42,7 +42,7 @@
                 </div>
             </li>
             <li id="collect_money_label" style="list-style-type: none;"><a id="Collect_Money" href="collect_money">&nbsp;Collect Money</a></li><br>
-            <li id="sign_out_label" style="list-style-type: none;"><a id="Sign_Out" href="#">&nbsp;Sign Out</a></li>
+            <li id="sign_out_label" style="list-style-type: none;"><a id="Sign_Out" href="{% url 'logout' %}">&nbsp;LogOut</a></li>
         </ul>
     </div>
     <div class="header">
