--- a/htmlPages/EventWebSite/base.html
+++ b/htmlPages/EventWebSite/base.html
@@ -35,7 +35,13 @@
 
         <div class="login_container">
             {% if user.is_authenticated %}
-            <a href="{% url 'participant_dashboard' %}"><button type="submit" id="profile_btn" class="submit_btn">Hi, {{user.fname}}</button></a>
+            <div class="dropdown">
+                    <a href="{% url 'participant_dashboard' %}"><button type="submit" id="profile_btn" class="submit_btn">Hi, {{user.fname}}</button>
+                <div>
+                    <a href="{% url 'participant_dashboard' %}">Dashborad</a>
+                    <a href="{% url 'participant_logout' %}">Log Out</a>  
+                </div>
+            </div>
             {% else %}
             <a href="register"><button type="submit" id="login_btn" class="submit_btn">Register</button></a>
             <a href="login"><button type="submit" id="login_btn" class="submit_btn">Sign In</button></a>
