--- a/htmlPages/EventWebSite/participant_dashboard.html
+++ b/htmlPages/EventWebSite/participant_dashboard.html
@@ -11,8 +11,42 @@
 {% endblock %}
 
 {% block content %}
-<div class="dropdown-profile-content">
-        <a href="{% url 'participant_dashboard' %}">Dashborad</a>
-        <a href="{% url 'participant_dashboard' %}">Log Out</a>  
+    <div class="remark_div">
+        <p>Remark: </p>
+        <p>There is nothing remark for you</p>
     </div>
+
+    <div class="Payment_div">
+        <p>Payment Status: </p>
+    </div>
+
+    <div class="event_status_table_title" id="sponsers">Event Status</div>
+
+    <div class="middle">
+            <div class="menu">
+                <li class="item" id="profile">
+                    <a href="#profile" class="btn">Profile</a>
+                    <div class="smenu">
+                        <a href="#">Posts</a>
+                        <a href="#">Picture</a>
+                    </div>
+                </li>
+    
+                <li class="item" id="messages">
+                    <a href="#messages" class="btn">Messages</a>
+                    <div class="smenu">
+                        <a href="#">News</a>
+                        <a href="#">Sent</a>
+                    </div>
+                </li>
+    
+                <li class="item" id="settings">
+                    <a href="#settings" class="btn">Settings</a>
+                    <div class="smenu">
+                        <a href="#">Language</a>
+                        <a href="#">Password</a>
+                    </div>
+                </li>
+            </div>
+        </div>
 {% endblock %}
