added event head app, add login page to event head

--- a/htmlPages/UserManager/eventCommittee.html
+++ b/htmlPages/UserManager/eventCommittee.html
@@ -12,7 +12,7 @@
     <div id="login">
         <a href="#">Volunteer</a>
         <a href="#">Co Ordinator</a>
-        <a href="#">Event Head</a>
+        <a href="{% url 'eventHead_login' %}">Event Head</a>
         <a href="{% url 'admin_login' %}">Admin</a>
     </div>
     <div id="Registration">
