Add backend of participant dashboard

--- a/htmlPages/EventWebSite/base.html
+++ b/htmlPages/EventWebSite/base.html
@@ -18,15 +18,15 @@
 
 <body>
     <div id="titleBar" class="basic">
-        <a href="homepage"><img id='logo' src="{% static 'media/logo.png' %}" alt="NU-Sport Logo"></a>
+        <a href="{% url 'homepage' %}"><img id='logo' src="{% static 'media/logo.png' %}" alt="NU-Sport Logo"></a>
     </div>
 
     <div class="header_links_container" id="header_links_container">
         <nav id="navBar">
             <ul>
-                <a id="home" href="homepage">Home</a>
+                <a id="home" href="{% url 'homepage' %}">Home</a>
                 <a id="about" href="homepage#about">About</a>
-                <a id="event" href="event_detail">Events</a>
+                <a id="event" href="{% url 'event_detail' %}">Events</a>
                 <a id="our_team" href="#">Our Team</a>
                 <a id="sponsor" href="homepage#sponsers">Sponsors</a>
                 <a id="contact" href="#">Contact</a>
@@ -36,9 +36,9 @@
         <div class="login_container">
             {% if user.is_authenticated %}
             <div class="dropdown">
-                    <a href="{% url 'participant_dashboard' %}"><button type="submit" id="profile_btn" class="submit_btn">Hi, {{user.fname}}</button>
+                    <a href="#"><button type="submit" id="profile_btn" class="submit_btn">Hi, {{user.fname}}</button>
                 <div>
-                    <a href="{% url 'participant_dashboard' %}">Dashborad</a>
+                    <a href="{% url 'participant_dashboard' reg_no=user.reg_no %}">Dashborad</a>
                     <a href="{% url 'participant_logout' %}">Log Out</a>  
                 </div>
             </div>
