--- a/htmlPages/EventWebSite/registration.html
+++ b/htmlPages/EventWebSite/registration.html
@@ -51,5 +51,5 @@
 {% endblock %}
     
 {% block loadScript %}
-    <script src="{% static 'script/registration.js' %}" type="text/javascript"></script>]
+    <script src="{% static 'script/registration.js' %}" type="text/javascript"></script>
 {% endblock %}
