--- a/htmlPages/EventHead/base.html
+++ b/htmlPages/EventHead/base.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base_eventHead.css' %}">
     {% block loadcss %}
 
     {% endblock %}
