--- a/htmlPages/EventHead/eventHead_dashboard.html
+++ b/htmlPages/EventHead/eventHead_dashboard.html
@@ -7,11 +7,44 @@
 {% endblock %}
 
 {% block loadcss %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/base_eventHead.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/eventhead_dashboard.css' %}">
 {% endblock %}
 
 {% block content %}
+<p>Assigned Events</p>
 
+<div class="middle">
+    <div class="menu">
+        {% for event in events %}
+        <li class="item" id="id_{{event.}}">
+            <a href="#profile" class="btn">Profile</a>
+            <div class="smenu">
+                <a href="#">Posts</a>
+                <a href="#">Picture</a>
+            </div>
+        </li>
+        {% endfor %}
+        <!-- <li class="item" id="messages">
+            <a href="#messages" class="btn">Messages</a>
+            <div class="smenu">
+                <a href="#">News</a>
+                <a href="#">Sent</a>
+            </div>
+            
+        </li>
+
+        <li class="item" id="settings">
+            <a href="#settings" class="btn">Settings</a>
+            <div class="smenu">
+                <a href="#">Language</a>
+                <a href="#">Password</a>
+            </div>
+        </li> -->
+    </div>
+</div>
+<a href="{% url 'attendance' %}">Attendance</a>
+<a href="{% url 'participation_info' %}">Participation Details</a>
+<a href="{% url 'enter_result' %}">Enter Result</a>
 {% endblock %}
 
 {% block loadScript %}
