edit administrator pages css, modify homepage css

--- a/htmlPages/EventWebSite/base.html
+++ b/htmlPages/EventWebSite/base.html
@@ -24,13 +24,13 @@
 
     <div class="header_links_container" id="header_links_container">
         <nav id="navBar">
-            <ul>
+            <ul class="navigation">
                 <a id="home" href="homepage">Home</a>
                 <a id="about" href="homepage#about">About</a>
                 <a id="event" href="event_detail">Events</a>
                 <a id="our_team" href="#">Our Team</a>
                 <a id="sponsor" href="homepage#sponsers">Sponsors</a>
-                <a id="contact" href="#">Contact</a>
+                <a id="contact" href="homepage#contact_us_container">Contact</a>
             </ul>
         </nav>
 
@@ -58,9 +58,6 @@
     {% block loadScript %}
     
     {% endblock %}
-    <div id="footer">
-
-    </div>
 </body>
 
 </html>
