--- a/htmlPages/Administrator/participant_manager.html
+++ b/htmlPages/Administrator/participant_manager.html
@@ -19,7 +19,7 @@
 <div class="main">
     
     <div class="main_detail_container" id="main_detail_container">
-        <div class="search_bar">
+        <!-- <div class="search_bar">
             <div class="search_inbox_container">
                 <input type="text" placeholder="Search" id="search_bar">&nbsp;&nbsp;
             </div>
@@ -34,18 +34,17 @@
                     <option value="z-a">Z-A</option>
                 </select>
             </div>
-        </div>
+        </div> -->
         
-        <br>
-        <br>
-        <br>
         <div class="manage_table_container" id="manage_table_container">
+
+            <h1><p id="table_title">Participant</p></h1>
             <table id="manage_table" class="manage_table">
                 <tr>
                     <th>Id</th>
                     <th>Name</th>
                     <th>Email ID</th>
-                    <th>Contect No</th>
+                    <th>Contact No</th>
                     <th>Clg Name</th>
                     <th>Stream Name</th>
                     <th>Remark</th>
