--- a/htmlPages/EventWebSite/login.html
+++ b/htmlPages/EventWebSite/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign In | NUTECH-2020</title>
     <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
-    <link rel="stylesheet" href="{% static 'css/registration.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css">
 </head>
 <body>
         <div id="reg_form_box" class="box">
