--- a/htmlPages/EventWebSite/registration_new.html
+++ b/htmlPages/EventWebSite/registration_new.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="main">
     <div id="reg_form_box" class="box">
         <!--<img src="../media/avatar.png" id="logo">-->
         <p id="registration" class="box_title">Registration</p>
@@ -47,7 +48,7 @@
         </form>
     </div>
 
-    <div class="main" id="main_container">
+    <div class="event_selection_container" id="main_container">
             <div class="event_selection_title_container">
                 <p class="event_selection_title" id="event_selection_title">Event Selection Form</p>
             </div>
@@ -78,7 +79,8 @@
             <div class="submit_container">
                 <button class="submit" type="submit" id="submit">SUBMIT</button>
             </div>
-        </div>
+    </div>
+    </div>
     
     <script src="../script/registration.js" type="text/javascript"></script>
 </body>
